--- a/main.css
+++ b/main.css
@@ -59,17 +59,45 @@ a{
     display: flex;
 }
 
-.header{
+header{
     position: fixed;
     top: 0;
-    min-height: 75px;
+    min-height: 90px;
     padding: 0px 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--light-medium-color);
+    background-image: linear-gradient(to bottom,var(--light-medium-color), var(--light-color)) ;
+    width: 100%;
 }
 
+@media(max-width: 650px){
+    header{
+        flex-wrap: wrap;
+    }
+}
+
+.logo{
+    width: 60vw;
+}
+.logo img{
+    width: 40px;
+}
+@media (max-width: 650px) {
+    .logo {
+      margin-top: 15px;
+      width: 100%;
+      position: relative;
+    }
+  }
+
+.logo > img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 20px;
+}
 @media(max-width: 650px){
     .logo > img{
         margin: auto;
@@ -78,4 +106,73 @@ a{
 
 nav{
     font-weight: 400;
+}
+
+@media (max-width: 650px){
+    nav {
+        margin-top: 10px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 50px;
+    }
+    nav li{
+        padding-bottom: 5px;
+    }
+}
+
+nav > ul{
+    width: 35vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+@media (max-width: 650px){
+    nav > ul{
+        flex-direction: column;
+    }
+}
+
+#get-email{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+    margin-top: 50px;
+}
+
+#get-email > h2{
+    margin-top: 20px;
+    word-wrap: break-word;
+}
+
+#get-email input[type="email"]{
+    max-width: 275px;
+    width: 100%;
+    padding: 5px;
+    font-family: 'Indie Flower', cursive;
+}
+
+#get-email input[type="submit"]{
+    max-width: 150px;
+    width: 100%;
+    height: 30px;
+    margin: 15px 0;
+    padding: 1%;
+    border: 0;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    transition: 1s;
+}
+#get-email input[type="submit"]:hover{
+    border: 1px var(--dark-color) solid;
+    background-color: var(--light-color);
+    color: var(--dark-color);
+    padding: 0.5%;
+    transition:1s;
+
 }
