--- a/main.css
+++ b/main.css
@@ -1,25 +1,24 @@
 /* Global elements Styling */
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     
 }
-
+/* Colors Var */
 :root{
---light-color: #F3DCFA;
---light-medium-color: #B938E0;
---mediumcolor: #7B1899;
---dark-medium-color:#350A42;
---dark-color: #270F2E;
+--light-color: #ffffff;
+--light-medium-color: #f4e289;
+--mediumcolor: #eac614;
+--dark-medium-color:#75630a;
+--dark-color: #000000;
 
 }
 
 body{
     background-color: var(--light-color);
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Lora', serif;
 }
 
 .paper-wapper{
@@ -58,11 +57,16 @@ a{
 .grid{
     display: flex;
 }
+@media(max-width: 650px){
+    .grid{
+        display: flex;
+    }
+}
 
 header{
     position: fixed;
     top: 0;
-    min-height: 90px;
+    min-height: 50px;
     padding: 0px 20px;
     display: flex;
     justify-content: space-around;
@@ -77,15 +81,22 @@ header{
     }
 }
 
+/* iframe{
+    display: none;
+} */
+
+/* Logo Styling */
+
 .logo{
     width: 60vw;
 }
 .logo img{
-    width: 40px;
+    width: 90px;
+    background: transparent;
 }
 @media (max-width: 650px) {
     .logo {
-      margin-top: 15px;
+      margin-top: 0px;
       width: 100%;
       position: relative;
     }
@@ -96,13 +107,15 @@ header{
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 @media(max-width: 650px){
     .logo > img{
         margin: auto;
     }
 }
+
+/* Nav Styling */
 
 nav{
     font-weight: 400;
@@ -135,6 +148,8 @@ nav > ul{
     }
 }
 
+/* Submit Email and Button Styling */
+
 #get-email{
     display: flex;
     flex-direction: column;
@@ -146,7 +161,7 @@ nav > ul{
 }
 
 #get-email > h2{
-    margin-top: 20px;
+    margin: 20px 0 10px 0;
     word-wrap: break-word;
 }
 
@@ -154,7 +169,7 @@ nav > ul{
     max-width: 275px;
     width: 100%;
     padding: 5px;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Roboto Slab', serif;
 }
 
 #get-email input[type="submit"]{
@@ -166,13 +181,74 @@ nav > ul{
     border: 0;
     background-color: var(--dark-color);
     color: var(--light-color);
-    transition: 1s;
+    transition: 0.5s;
 }
 #get-email input[type="submit"]:hover{
     border: 1px var(--dark-color) solid;
     background-color: var(--light-color);
     color: var(--dark-color);
     padding: 0.5%;
-    transition:1s;
+    transition:0.5s;
 
 }
+
+@media (max-width: 650px){
+    #get-email{
+        margin-top: 130px;
+    }
+    #get-email h2{
+        font-size: medium;
+    }
+}
+
+/* Sobre a Serie Styling */
+
+#sobre-a-serie{
+    margin-top: 30px;
+}
+
+#sobre-a-serie img{
+    display: flex;
+}
+
+@media(max-width: 550px){
+    #sobre-a-serie img{
+        display: none;
+        width: 90px;
+    }
+    #sobre-a-serie h2{
+        margin-top: 5%;
+    }
+}
+
+
+#sobre-a-serie .desc{
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 0;
+}
+
+/* Sobre a Autor Styling */
+
+#sobre-o-autor{
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+/* Livros Styling */
+#sobre-os-livros{
+    padding: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.livro{
+    margin: 10px;
+    padding: 5px;
+    height: 179px;
+    width: 270px;
+}
+
